# bakis

./: .gitignore  results.txt
BBD-dokumentas/: .gitignore
BBD-dokumentas/BakBaigDarb/: Pagrindinis 6.synctex(busy)  Pagrindinis.tex  VUMIFTemplateClass.cls  bibliografija.bib  titulinis.tex
BBD-skaidres/: BBD-skaidres.tex
Kursinio-skaidres/: BBD-skaidres.fdb_latexmk  BBD-skaidres.fls  BBD-skaidres.tex  VU MIF skaidriu sablonas.tex  VU MIF slides template.tex
room-exploration/: .gitignore  README.md
room-exploration/ros2_ws/src/room_exploration/: package.xml  setup.cfg  setup.py
room-exploration/ros2_ws/src/room_exploration/config/: exploration.rviz  exploration.yaml  mapper_params.yaml  nav2_params.yaml
room-exploration/ros2_ws/src/room_exploration/launch/: bringup.launch.py
room-exploration/ros2_ws/src/room_exploration/room_exploration/: main_node.py  map_utils.py
room-exploration/ros2_ws/src/room_exploration/room_exploration/exploration/: base.py  bfs.py  frontier.py  information_gain.py  rrt.py  voronoi.py
room-exploration/ros2_ws/src/room_exploration/room_exploration/nodes/: lds_driver_node.py
